# SinglePingProject

./: .gitignore  BuildExperience.md  CONNECTION_IMPLEMENTATION_SUMMARY.md  CURRENT_MEASUREMENT_FLOW.md  CURRENT_MEASUREMENT_SYSTEM_ANALYSIS.md  GIT_COMMIT_INSTRUCTIONS.md  GIT_VERSION_STRATEGY.md  MEASUREMENT_FLOW_ANALYSIS.md  MEASUREMENT_PROCESS_ANALYSIS.md  MIPE_CONNECTION_IMPLEMENTATION_PHASE1_SUMMARY.md  MIPE_SYNC_DEVELOPMENT_PHASES.md  MOTOAPP_HOST_CONNECTION_LOG.md  NORDIC_ENV_SETUP_README.md  PROJECT_CLEANUP_SUMMARY.md  README_PROJECT_STRUCTURE.md  ZEPHYR_MIGRATION_README.md  build-host-device - Copy.bat  build-host-device.bat  build-mipe-device.bat  build-motoapp.bat  build_both_devices.bat  build_host.bat  build_mipe.bat  gemini_session_notes.md  git-commit-project.bat  git-commit.bat  gradle.properties  how --stat 3f30d87  migrate-zephyr-sdk.bat  random_battery_implementation_summary.md  read_serial.ps1  read_serial.py  rssi_implementation_summary.txt  serial_monitor.bat  serial_monitor.py  settings.gradle.kts  setup-zephyr-env.bat  setup-zephyr-env.ps1  setup_git_versioning.ps1  setup_nordic_env.bat  (+4 more)
Host/host_device/: ALTERNATING_RSSI_V6_README.md  CMakeLists.txt  FIXED_V7_FIRMWARE_README.md  GIT_USAGE_GUIDE.md  REAL_RSSI_FIX_README.md  TEST_FIXED_RSSI_README.md  app.overlay  build.ps1  build_real_rssi.ps1  build_test_fixed_rssi.ps1  build_test_fixed_rssi_v2.ps1  build_test_fixed_rssi_v2_fullpath.ps1  build_test_fixed_rssi_v2_patch.ps1  build_test_fixed_rssi_v2_simple.ps1  build_test_fixed_rssi_v3.ps1  build_test_fixed_rssi_v4.ps1  build_test_fixed_rssi_v5.ps1  (+13 more)
(+435 files in other folders)
